# Secura-AI

./: .gitignore  README.md  TESTING.md  USER_MANUAL.md  custom_server.py  docker-compose.yml  ngrok_log.txt  requirements.txt  secura-ai.code-workspace  secura.db
.github/workflows/: build-server.yml  release-agent.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py
backend/app/: main.py  test_engine.py  worker.py
backend/app/api/: admin.py  bootstrap.py  catalog.py  console.py  ingest.py  logs.py  security.py
backend/app/core/: auth.py  config.py  crypto.py  domain.py  mvp_catalog.py  queue.py  security_config.py  security_engine.py
backend/app/db/: session.py
backend/app/db/security/: threat_engine.py
backend/app/jobs/: detections.py
backend/app/models/: api_key.py  detection.py  developer.py  event.py  incident.py  notification.py  org.py  project.py  threat_log.py
backend/app/schemas/: console.py  ingest.py  mvp.py  security.py
frontend/: downloads.json  index.html  script.js  style.css
sdk/python/: README.md  pyproject.toml
sdk/python/src/secura_sdk/: __init__.py  client.py  http.py  signing.py
